[gd_scene load_steps=3 format=3 uid="uid://cn2kbp7i3tety"]

[ext_resource type="Script" path="res://scenes/scripts/chorus.gd" id="1_on7a2"]
[ext_resource type="PackedScene" uid="uid://dvokuf8gpcq1q" path="res://scenes/knob.tscn" id="2_folrt"]

[node name="Flanger" type="PanelContainer"]
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 1
script = ExtResource("1_on7a2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Flanger"
horizontal_alignment = 1

[node name="EnabledCheckBox" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
text = "Enabled"

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
columns = 3

[node name="DelayKnob" parent="VBoxContainer/GridContainer" instance=ExtResource("2_folrt")]
unique_name_in_owner = true
layout_mode = 2
min_value = 0.5
max_value = 10.0
sensitivity = 0.1
label_unit = "ms"
title = "Delay"
current_value = 5.0

[node name="DepthKnob" parent="VBoxContainer/GridContainer" instance=ExtResource("2_folrt")]
unique_name_in_owner = true
layout_mode = 2
min_value = 0.1
max_value = 5.0
step = 0.01
sensitivity = 0.1
title = "Depth"
current_value = 3.0

[node name="FrequencyKnob" parent="VBoxContainer/GridContainer" instance=ExtResource("2_folrt")]
unique_name_in_owner = true
layout_mode = 2
max_value = 3.0
step = 0.01
sensitivity = 0.1
title = "Frequency"
current_value = 0.5

[node name="FeedbackKnob" parent="VBoxContainer/GridContainer" instance=ExtResource("2_folrt")]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.01
sensitivity = 0.1
title = "Feedback"
current_value = 0.2

[node name="FilterKnob" parent="VBoxContainer/GridContainer" instance=ExtResource("2_folrt")]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.01
sensitivity = 0.1
title = "Filter"
current_value = 0.5

[node name="WetKnob" parent="VBoxContainer/GridContainer" instance=ExtResource("2_folrt")]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.01
sensitivity = 0.1
title = "Mix"
current_value = 0.5

[connection signal="toggled" from="VBoxContainer/EnabledCheckBox" to="." method="_on_enabled_check_box_toggled"]
[connection signal="value_changed" from="VBoxContainer/GridContainer/DelayKnob" to="." method="_on_delay_knob_value_changed"]
[connection signal="value_changed" from="VBoxContainer/GridContainer/DepthKnob" to="." method="_on_depth_knob_value_changed"]
[connection signal="value_changed" from="VBoxContainer/GridContainer/FrequencyKnob" to="." method="_on_frequency_knob_value_changed"]
[connection signal="value_changed" from="VBoxContainer/GridContainer/FeedbackKnob" to="." method="_on_feedback_knob_value_changed"]
[connection signal="value_changed" from="VBoxContainer/GridContainer/FilterKnob" to="." method="_on_filter_knob_value_changed"]
[connection signal="value_changed" from="VBoxContainer/GridContainer/WetKnob" to="." method="_on_wet_knob_value_changed"]
